Updating Cassandra to version 2.2

--- a/cassandra-base/Dockerfile
+++ b/cassandra-base/Dockerfile
@@ -17,9 +17,9 @@ RUN echo "deb http://debian.datastax.com/community stable main" > /etc/apt/sourc
 # Workaround for https://github.com/docker/docker/issues/6345
 RUN ln -s -f /bin/true /usr/bin/chfn
 
-# Install Cassandra 2.1.8
+# Install Cassandra 2.2.0
 RUN apt-get update && \
-    apt-get install -y cassandra=2.1.8 dsc21=2.1.8-1 && \
+    apt-get install -y --force-yes cassandra=2.2.0 dsc22=2.2.0-1 && \
     rm -rf /var/lib/apt/lists/*
 
 ENV CASSANDRA_CONFIG /etc/cassandra
@@ -33,5 +33,9 @@ EXPOSE 7199 7000 7001 9160 9042 22 8012 61621
 # For adding custom lucene index feature
 # Note: this should be compiled on your machine and placed in this directory
 COPY cassandra-lucene-index-plugin-2.1.8.0.jar /usr/share/cassandra/lib/
+COPY rockerbox-analyzers.jar /usr/share/cassandra/lib/
+#COPY metrics-graphite-2.2.0.jar /usr/share/cassandra/lib/
+COPY metrics-graphite-3.1.2.jar /usr/share/cassandra/lib/
+COPY cassandra-metrics.yaml /etc/cassandra/
 
 CMD [""]
