updated cassandra to 2.2.5

--- a/cassandra-base/Dockerfile
+++ b/cassandra-base/Dockerfile
@@ -19,8 +19,13 @@ RUN ln -s -f /bin/true /usr/bin/chfn
 
 # Install Cassandra 2.2.0
 RUN apt-get update && \
-    apt-get install -y --force-yes cassandra=2.2.0 dsc22=2.2.0-1 && \
+    apt-get install -y --force-yes cassandra=2.2.5 dsc22=2.2.5-1 && \
     rm -rf /var/lib/apt/lists/*
+
+# Setup Remote JMX
+RUN cp -f $JAVA_HOME/jre/lib/management/jmxremote.access $JAVA_HOME/jre/lib/management/jmxremote.access.bak \
+	&& chown root:cassandra $JAVA_HOME/jre/lib/management/jmxremote.access* \
+	&& chmod 664 $JAVA_HOME/jre/lib/management/jmxremote.access*
 
 ENV CASSANDRA_CONFIG /etc/cassandra
 
@@ -35,7 +40,7 @@ EXPOSE 7199 7000 7001 9160 9042 22 8012 61621
 COPY cassandra-lucene-index-plugin-2.1.8.0.jar /usr/share/cassandra/lib/
 COPY rockerbox-analyzers.jar /usr/share/cassandra/lib/
 #COPY metrics-graphite-2.2.0.jar /usr/share/cassandra/lib/
-COPY TimeWindowCompactionStrategy-2.2.0.jar /usr/share/cassandra/lib/
+COPY TimeWindowCompactionStrategy-2.2.5.jar /usr/share/cassandra/lib/
 
 COPY metrics-graphite-3.1.2.jar /usr/share/cassandra/lib/
 COPY cassandra-metrics.yaml /etc/cassandra/
